Adicionando Perguntas a pagina

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -15,14 +16,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
     <div class="root">
-
-        <section class="logo">
-          <img src="ZapRecall-Recursos/logo.png" alt="logo">
-          <h1>ZapRecall<h1>
-        </section>
-        <button>Iniciar Recall!</button>
-        
     </div>
-  
+
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
